Fixed some of the layout issues for webkit. It applies default sizes that are lame if the object above does not have it. It also appears to have a lame default value of the background being white and not transparent. Will look into it more later. Speaking of transparency; tried using the div stuff with native opacity and that appears to fail a bit because all the decendant children inherit it and thCat sucks and I can not override it and might have to do some lame two div solution. Will work it out later.

--- a/ROOT/css/style.css
+++ b/ROOT/css/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 html {
-    background: #000000 url(/site-images/c1.jpg);
+    background: #000000 url(/site-images/background.png) no-repeat;
     color: #BCBCBC;
 }
 
@@ -16,16 +16,28 @@ p {
 }
 
 .contentdiv {
-	background: url(/site-images/30percentblackblock.png);
+	background: #ffffff;
+    opacity: .30;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	padding: 3px 10px;
+}
+
+.contentdiv > * {
+    opacity: 1.0;
 }
 
 #left {
 	width: 200px;
 	height: 200px;
 	float: left;
+}
+
+#logo {
+	width: 200px;
+	height:200px;
+	padding 0;
+	margin 0;
 }
 
 #right {
